fix bug menu on iphone

--- a/wp-content/themes/futurity/sass/parts/_header.scss
+++ b/wp-content/themes/futurity/sass/parts/_header.scss
@@ -241,6 +241,9 @@
 		}
 		.menu-item {
 			margin: 40px 50px;
+			@media #{$iphone} {
+				margin: 20px 50px ;
+			}
 			&.home {
 				a {
 					font-size: 30px;
